Changed the text style and tried to fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ p {
   column-width: auto;
 }
 
-.Jumbo {
+.ListGroup {
   align-content: center;
 }
 
